z-index fix

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -522,6 +522,8 @@ section:not(#s1) h3{
 }
 
 #view .playBox{
+    position: absolute;
+    z-index:50;
     width:calc(100vw - 40px);
     height:calc(((100vw - 40px) / 16) * 9)
     
